changing name to aksjegrafen

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Søk og finn info om alle aksjonærer i Norge"
+      content="Søk og finn info om alle aksjonærer og aksjeselskaper i Norge."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Norske aksjer</title>
+    <title>Aksjegrafen</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
