chore: meta description and keywords

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Søk og finn info om alle aksjonærer og aksjeselskaper i Norge." />
+    <meta
+      name="description"
+      content="Søk blant alle aksjonærer og aksjeselskaper i Norge. Filtrer på næring og bransje. Finn reelle rettighetshavere."
+    />
+    <meta
+      name="keywords"
+      content="Aksjonærregisteret, Regnskapsregisteret, Enhetsregisteret, Reelle rettighetshavere"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
