--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       name="keywords"
       content="Aksjonærregisteret, Regnskapsregisteret, Enhetsregisteret, Reelle rettighetshavere"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
